--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
     <!-- App Scripts -->
     <script src="js/db.js"></script>
     <script src="js/calculations.js"></script>
+    <script src="js/font-loader.js"></script>
     <script src="js/pdf-generator.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
